--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-between;
   background-color: #202020;
-  padding: 0 10%;
+  padding: 1rem;
 }
 
 .logo {
