--- a/components/Authentication/LoginForm.module.css
+++ b/components/Authentication/LoginForm.module.css
@@ -1,28 +1,27 @@
-.login {
-  max-width: 40rem;
-  padding: 2rem;
+.info {
+  margin-bottom: 2rem;
 }
 
-.control {
+.form div {
   margin: 1rem 0;
   display: flex;
   align-items: stretch;
   flex-direction: column;
 }
 
-.control label,
-.control input {
+.form label,
+.form input {
   display: block;
 }
 
-.control label {
+.form label {
   font-weight: bold;
   flex: 1;
   color: #464646;
   margin-bottom: 0.5rem;
 }
 
-.control input {
+.form input {
   flex: 3;
   font: inherit;
   padding: 0.35rem 0.35rem;
@@ -30,38 +29,20 @@
   border: 1px solid #ccc;
 }
 
-.control input:focus {
+.form input:focus {
   outline: none;
   border-color: #4f005f;
   background: #f6dbfc;
 }
 
-.control.invalid input {
+.form.invalid input {
   border-color: red;
   background: #fbdada;
 }
 
-.actions {
-  text-align: right;
-}
-
-.button {
-  font-size: 1.15rem;
-  color: #555;
-  background-color: transparent;
-  border: 0px;
-}
-
-.button:hover,
-.button:active,
-.button.active {
-  color: black;
-  border: 0px;
-}
-
 
 @media (min-width: 768px) {
-  .control {
+  .form div {
     align-items: center;
     flex-direction: row;
   }
