--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-size: 100%;
 }
 
 a {
