Favorite functionality with custom hook

--- a/components/Products/ProductItem.module.css
+++ b/components/Products/ProductItem.module.css
@@ -42,8 +42,18 @@
   width: 100%;
 }
 
+.actions button:last-of-type {
+  margin-top: 0.5rem;
+}
+
 .actions button:hover,
-.actions button:active {
+.actions button:active,
+.actions button.favorite:hover {
   background-color: #19632d;
+  color: white;
+}
+
+.actions button.favorite {
+  background-color: #4f005f;
   color: white;
 }
